@@ -1,0 +1,4 @@
+[buildout]
+extends = versions.cfg
+package-name = eea.depiction
+develop = ../../
