@@ -1,0 +1,8 @@
+[buildout]
+extends = http://svn.plone.org/svn/collective/buildout/plonetest/test-4.x.cfg
+
+[versions]
+
+# Do not remove zc-buildout from this file as it's used by install.sh
+zc.buildout=1.5.2
+setuptools=0.6c11
